# what-test

./: .env-local  .gitignore  Dockerfile  README.md  docker-compose.yml  local_db.sql  manage.py  old env file  pyproject.toml
product_api/: models.py  serializers.py  test_models.py  urls.py  views.py
product_api/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_product_selected.py
product_api/tests/: test_models.py  test_serializers.py  test_views.py
staticfiles/: staticfiles.json
uploader/: admin.py  models.py
uploader/migrations/: 0001_initial.py
user_api/: models.py  serializers.py  test_models.py  views.py
user_api/migrations/: 0001_initial.py  0002_appuser_is_staff.py
user_api/tests/: test_models.py  test_serializers.py  test_views.py
whattest/: asgi.py  settings.py  urls.py  wsgi.py
