[tool.poetry]
name = "whattest"
version = "0.1.0"
description = "Test For What"
authors = ["Richard McSharry <rmcsharry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
django = "^4.2.7"
djangorestframework = "^3.14.0"
uwsgi = "^2.0.19.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
django-storage-url = "^0.9.2"
boto3 = "^1.14.49"
django-cors-headers = "^4.3.1"
django-seed = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
